Change the font color green

--- a/googleTry.html
+++ b/googleTry.html
@@ -11,7 +11,7 @@ body {
   font-family: Arial;
   padding: 10px;
   background: #fff;
-  color: #222
+  color: green
 }
 
 /* Style the top navigation bar */
