--- a/googleTry.html
+++ b/googleTry.html
@@ -1,45 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<style>
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: Arial;
-  padding: 10px;
-  background: #fff;
-  color: green
-}
-
-.header {
-  margin-top: 130px;
-  padding: 30px;
-  text-align: center;
-  background: white;
-}
-
-.header h1 {
-  font-size: 90px;
-}
-
-.inputBar {
-  display: block;
-  margin: auto;
-  height: 45px;
-  width: 500px;
-  border: 1px solid lightgrey;
-  border-radius: 50px;
-  padding: 20px 40px;
-}
-
-.inputBar:hover {
-  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.15), 0 3px 5px 0 rgba(0,0,0,0.1);
-}
-
-</style>
+<link rel="stylesheet" href="googleTry.css"
 </head>
 <body>
 
